--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       background: #f0f0f0;
       font-family: sans-serif;
       user-select: none;
@@ -47,8 +46,9 @@
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-  import { getDatabase, ref, onValue, set, update, get } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js";
+  import { getDatabase, ref, onValue, set, get } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js";
 
+  // your firebaseConfig
   const firebaseConfig = {
     apiKey: "AIzaSyDeddxmHd2gRtZZBEaEmOqDA8qep9ReUdw",
     authDomain: "dots-n-boxes-9010b.firebaseapp.com",
@@ -68,176 +68,191 @@
   const info = document.getElementById("info");
   const scoreDisplay = document.getElementById("score");
   const createBtn = document.getElementById("createRoomBtn");
-  const joinBtn = document.getElementById("joinRoomBtn");
+  const joinBtn   = document.getElementById("joinRoomBtn");
   const roomInput = document.getElementById("roomInput");
 
   const rows = 10, cols = 10;
   const spacing = canvas.width / cols;
   const dotRadius = 4;
-  let roomId = null;
-  let playerNumber = null;
-  let gameRef = null;
-  let selectedDot = null;
+  let roomId, playerNumber, gameRef, selectedDot = null;
 
   function updateScoreUI(game) {
     scoreDisplay.textContent = `P1: ${game.scores[1]}  P2: ${game.scores[2]}`;
   }
 
   function draw(game) {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    // boxes
     for (let key in game.squares) {
-      const [x, y] = key.split(",").map(Number);
-      ctx.fillStyle = game.squares[key] === 1 ? "rgba(0,0,255,0.3)" : "rgba(255,0,0,0.3)";
-      ctx.fillRect(x * spacing + 2, y * spacing + 2, spacing - 4, spacing - 4);
+      const [x,y] = key.split(",").map(Number);
+      ctx.fillStyle = game.squares[key]===1 
+        ? "rgba(0,0,255,0.3)" : "rgba(255,0,0,0.3)";
+      ctx.fillRect(
+        x*spacing+2, y*spacing+2, 
+        spacing-4, spacing-4
+      );
     }
+    // lines
     for (let key in game.lines) {
-      const [x1, y1, x2, y2] = key.split(",").map(Number);
+      const [x1,y1,x2,y2] = key.split(",").map(Number);
       ctx.beginPath();
-      ctx.moveTo(x1 * spacing, y1 * spacing);
-      ctx.lineTo(x2 * spacing, y2 * spacing);
-      ctx.strokeStyle = game.lines[key] === 1 ? "blue" : "red";
+      ctx.moveTo(x1*spacing, y1*spacing);
+      ctx.lineTo(x2*spacing, y2*spacing);
+      ctx.strokeStyle = game.lines[key]===1 ? "blue" : "red";
       ctx.lineWidth = 2;
       ctx.stroke();
     }
-    for (let y = 0; y <= rows; y++) {
-      for (let x = 0; x <= cols; x++) {
+    // dots
+    for (let y=0; y<=rows; y++) {
+      for (let x=0; x<=cols; x++) {
         ctx.beginPath();
-        ctx.arc(x * spacing, y * spacing, dotRadius, 0, 2 * Math.PI);
-        ctx.fillStyle = selectedDot && selectedDot[0] === x && selectedDot[1] === y ? (playerNumber === 1 ? "blue" : "red") : "black";
+        ctx.arc(x*spacing, y*spacing, dotRadius, 0,Math.PI*2);
+        ctx.fillStyle = (selectedDot 
+          && selectedDot[0]===x 
+          && selectedDot[1]===y)
+          ? (playerNumber===1?"blue":"red")
+          : "black";
         ctx.fill();
       }
     }
   }
 
-  function keyForLine(x1, y1, x2, y2) {
-    return (x1 < x2 || (x1 === x2 && y1 < y2)) ? `${x1},${y1},${x2},${y2}` : `${x2},${y2},${x1},${y1}`;
+  function keyForLine(x1,y1,x2,y2) {
+    return (x1<x2||(x1===x2&&y1<y2))
+      ? `${x1},${y1},${x2},${y2}`
+      : `${x2},${y2},${x1},${y1}`;
   }
 
-  function getDotAt(x, y) {
-    for (let gy = 0; gy <= rows; gy++) {
-      for (let gx = 0; gx <= cols; gx++) {
-        const dx = gx * spacing - x;
-        const dy = gy * spacing - y;
-        if (Math.sqrt(dx * dx + dy * dy) < spacing * 0.3) return [gx, gy];
+  function getDotAt(px, py) {
+    for (let gy=0; gy<=rows; gy++) {
+      for (let gx=0; gx<=cols; gx++) {
+        const dx = gx*spacing - px;
+        const dy = gy*spacing - py;
+        if (Math.hypot(dx,dy) < spacing*0.3) 
+          return [gx,gy];
       }
     }
     return null;
   }
 
-  function areAdjacent([x1, y1], [x2, y2]) {
-    const dx = Math.abs(x1 - x2);
-    const dy = Math.abs(y1 - y2);
-    return (dx === 1 && dy === 0) || (dx === 0 && dy === 1);
+  function areAdjacent([x1,y1],[x2,y2]) {
+    return (Math.abs(x1-x2)===1 && y1===y2)
+        || (Math.abs(y1-y2)===1 && x1===x2);
   }
 
-  function tryAddLine(game, x1, y1, x2, y2) {
-    const lineKey = keyForLine(x1, y1, x2, y2);
+  function tryAddLine(game, x1,y1,x2,y2) {
+    const lineKey = keyForLine(x1,y1,x2,y2);
     if (game.lines[lineKey]) return game;
-
     game.lines[lineKey] = playerNumber;
-    let claimed = false;
-    const sqs = [];
-
-    if (x1 !== x2) {
-      if (y1 > 0) sqs.push([Math.min(x1, x2), y1 - 1]);
-      if (y1 < rows) sqs.push([Math.min(x1, x2), y1]);
+    let claimed=false, checks=[];
+    if (x1!==x2) {
+      if (y1>0)      checks.push([Math.min(x1,x2),y1-1]);
+      if (y1<rows)   checks.push([Math.min(x1,x2),y1]);
     } else {
-      if (x1 > 0) sqs.push([x1 - 1, Math.min(y1, y2)]);
-      if (x1 < cols) sqs.push([x1, Math.min(y1, y2)]);
+      if (x1>0)      checks.push([x1-1,Math.min(y1,y2)]);
+      if (x1<cols)   checks.push([x1,  Math.min(y1,y2)]);
     }
-
-    for (const [sx, sy] of sqs) {
-      const edges = [
-        keyForLine(sx, sy, sx + 1, sy),
-        keyForLine(sx, sy + 1, sx + 1, sy + 1),
-        keyForLine(sx, sy, sx, sy + 1),
-        keyForLine(sx + 1, sy, sx + 1, sy + 1),
+    for (let [sx,sy] of checks) {
+      const edges=[
+        keyForLine(sx,sy,  sx+1,sy),
+        keyForLine(sx,sy+1,sx+1,sy+1),
+        keyForLine(sx,sy,  sx,  sy+1),
+        keyForLine(sx+1,sy,sx+1,sy+1),
       ];
-      if (edges.every(k => game.lines[k])) {
-        game.squares[`${sx},${sy}`] = playerNumber;
+      if (edges.every(k=>game.lines[k])) {
+        game.squares[`${sx},${sy}`]=playerNumber;
         game.scores[playerNumber]++;
-        claimed = true;
+        claimed=true;
       }
     }
-
-    if (!claimed) game.currentPlayer = 3 - playerNumber;
+    if (!claimed) game.currentPlayer = 3-playerNumber;
     return game;
   }
 
-  canvas.addEventListener("click", async (e) => {
-    if (!gameRef || playerNumber == null) return;
+  // click handler
+  canvas.addEventListener("click", async e => {
+    if (!gameRef || playerNumber==null) return;
     const snap = await get(gameRef);
     const game = snap.val();
-    if (!game || game.currentPlayer !== playerNumber) return;
+    if (!game || game.currentPlayer!==playerNumber) return;
 
-    const rect = canvas.getBoundingClientRect();
-    const x = e.clientX - rect.left;
-    const y = e.clientY - rect.top;
-    const dot = getDotAt(x, y);
+    const r = canvas.getBoundingClientRect();
+    const x = e.clientX - r.left;
+    const y = e.clientY - r.top;
+    const dot = getDotAt(x,y);
     if (!dot) return;
 
+    // first tap: select
     if (!selectedDot) {
       selectedDot = dot;
       draw(game);
       return;
     }
-
-    if (dot[0] === selectedDot[0] && dot[1] === selectedDot[1]) {
-      selectedDot = null;
+    // same tap deselect
+    if (dot[0]===selectedDot[0]&&dot[1]===selectedDot[1]) {
+      selectedDot=null;
       draw(game);
       return;
     }
-
-    if (!areAdjacent(selectedDot, dot)) {
+    // non-adjacent: move selection
+    if (!areAdjacent(selectedDot,dot)) {
       selectedDot = dot;
       draw(game);
       return;
     }
 
-    const [x1, y1] = selectedDot;
-    const [x2, y2] = dot;
+    // valid adjacent second tap → place line
+    const [x1,y1]=selectedDot, [x2,y2]=dot;
     selectedDot = null;
-
-    const newGame = tryAddLine(JSON.parse(JSON.stringify(game)), x1, y1, x2, y2);
+    const newGame = tryAddLine(
+      JSON.parse(JSON.stringify(game)),
+      x1,y1,x2,y2
+    );
+    // immediate local draw/update
+    updateScoreUI(newGame);
+    draw(newGame);
+    // push full state
     await set(gameRef, newGame);
   });
 
+  // create
   createBtn.onclick = async () => {
-    roomId = Math.random().toString(36).substring(2, 8);
+    roomId = Math.random().toString(36).slice(2,8);
     playerNumber = 1;
-    gameRef = ref(db, "games/" + roomId);
+    gameRef = ref(db, "games/"+roomId);
     await set(gameRef, {
-      lines: {},
-      squares: {},
-      scores: {1: 0, 2: 0},
-      currentPlayer: 1
+      lines:{}, squares:{},
+      scores:{1:0,2:0},
+      currentPlayer:1
     });
-    info.textContent = `Room: ${roomId} (You are Player 1)`;
-    listenForUpdates();
+    info.textContent = `Room: ${roomId} (You are P1)`;
+    onValue(gameRef, snap=>{
+      const gm = snap.val();
+      if (!gm) return;
+      updateScoreUI(gm);
+      draw(gm);
+    });
   };
 
+  // join
   joinBtn.onclick = async () => {
     roomId = roomInput.value.trim();
     if (!roomId) return;
-    gameRef = ref(db, "games/" + roomId);
+    gameRef = ref(db, "games/"+roomId);
     const snap = await get(gameRef);
     if (!snap.exists()) {
       alert("Room not found");
       return;
     }
     playerNumber = 2;
-    info.textContent = `Joined Room: ${roomId} (You are Player 2)`;
-    listenForUpdates();
-  };
-
-  function listenForUpdates() {
-    onValue(gameRef, snap => {
-      const game = snap.val();
-      if (!game) return;
-      updateScoreUI(game);
-      draw(game);
+    info.textContent = `Joined ${roomId} (You are P2)`;
+    onValue(gameRef, snap=>{
+      const gm = snap.val();
+      if (!gm) return;
+      updateScoreUI(gm);
+      draw(gm);
     });
-  }
+  };
 </script>
 </body>
 </html>
