--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Dots & Boxes Multiplayer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       background: #f0f0f0;
       font-family: sans-serif;
       user-select: none;
@@ -44,215 +45,231 @@
   <div id="score">P1: 0  P2: 0</div>
   <canvas id="game" width="440" height="440"></canvas>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-  import { getDatabase, ref, onValue, set, get } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+    import { getDatabase, ref, onValue, set, get } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js";
 
-  // your firebaseConfig
-  const firebaseConfig = {
-    apiKey: "AIzaSyDeddxmHd2gRtZZBEaEmOqDA8qep9ReUdw",
-    authDomain: "dots-n-boxes-9010b.firebaseapp.com",
-    databaseURL: "https://dots-n-boxes-9010b-default-rtdb.firebaseio.com",
-    projectId: "dots-n-boxes-9010b",
-    storageBucket: "dots-n-boxes-9010b.appspot.com",
-    messagingSenderId: "710830234125",
-    appId: "1:710830234125:web:848952644d9842f0761344",
-    measurementId: "G-MEB8GZGSY1"
-  };
+    // Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyDeddxmHd2gRtZZBEaEmOqDA8qep9ReUdw",
+      authDomain: "dots-n-boxes-9010b.firebaseapp.com",
+      databaseURL: "https://dots-n-boxes-9010b-default-rtdb.firebaseio.com",
+      projectId: "dots-n-boxes-9010b",
+      storageBucket: "dots-n-boxes-9010b.appspot.com",
+      messagingSenderId: "710830234125",
+      appId: "1:710830234125:web:848952644d9842f0761344",
+      measurementId: "G-MEB8GZGSY1"
+    };
 
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
 
-  const canvas = document.getElementById("game");
-  const ctx = canvas.getContext("2d");
-  const info = document.getElementById("info");
-  const scoreDisplay = document.getElementById("score");
-  const createBtn = document.getElementById("createRoomBtn");
-  const joinBtn   = document.getElementById("joinRoomBtn");
-  const roomInput = document.getElementById("roomInput");
+    const canvas = document.getElementById("game");
+    const ctx = canvas.getContext("2d");
+    const info = document.getElementById("info");
+    const scoreDisplay = document.getElementById("score");
+    const createBtn = document.getElementById("createRoomBtn");
+    const joinBtn   = document.getElementById("joinRoomBtn");
+    const roomInput = document.getElementById("roomInput");
 
-  const rows = 10, cols = 10;
-  const spacing = canvas.width / cols;
-  const dotRadius = 4;
-  let roomId, playerNumber, gameRef, selectedDot = null;
+    const rows = 10, cols = 10;
+    const spacing = canvas.width / cols;
+    const dotRadius = 4;
+    let roomId, playerNumber, gameRef;
+    let selectedDot = null;
 
-  function updateScoreUI(game) {
-    scoreDisplay.textContent = `P1: ${game.scores[1]}  P2: ${game.scores[2]}`;
-  }
-
-  function draw(game) {
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    // boxes
-    for (let key in game.squares) {
-      const [x,y] = key.split(",").map(Number);
-      ctx.fillStyle = game.squares[key]===1 
-        ? "rgba(0,0,255,0.3)" : "rgba(255,0,0,0.3)";
-      ctx.fillRect(
-        x*spacing+2, y*spacing+2, 
-        spacing-4, spacing-4
-      );
+    function updateScoreUI(game) {
+      scoreDisplay.textContent = `P1: ${game.scores[1]}  P2: ${game.scores[2]}`;
     }
-    // lines
-    for (let key in game.lines) {
-      const [x1,y1,x2,y2] = key.split(",").map(Number);
-      ctx.beginPath();
-      ctx.moveTo(x1*spacing, y1*spacing);
-      ctx.lineTo(x2*spacing, y2*spacing);
-      ctx.strokeStyle = game.lines[key]===1 ? "blue" : "red";
+
+    function draw(game) {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Draw completed boxes
+      for (let key in game.squares) {
+        const [x, y] = key.split(",").map(Number);
+        ctx.fillStyle = game.squares[key] === 1
+          ? "rgba(0,0,255,0.3)"
+          : "rgba(255,0,0,0.3)";
+        ctx.fillRect(
+          x * spacing + 2,
+          y * spacing + 2,
+          spacing - 4,
+          spacing - 4
+        );
+      }
+
+      // Draw lines
       ctx.lineWidth = 2;
-      ctx.stroke();
-    }
-    // dots
-    for (let y=0; y<=rows; y++) {
-      for (let x=0; x<=cols; x++) {
+      ctx.lineCap = "round";
+      for (let key in game.lines) {
+        const [x1, y1, x2, y2] = key.split(",").map(Number);
         ctx.beginPath();
-        ctx.arc(x*spacing, y*spacing, dotRadius, 0,Math.PI*2);
-        ctx.fillStyle = (selectedDot 
-          && selectedDot[0]===x 
-          && selectedDot[1]===y)
-          ? (playerNumber===1?"blue":"red")
-          : "black";
-        ctx.fill();
+        ctx.moveTo(x1 * spacing, y1 * spacing);
+        ctx.lineTo(x2 * spacing, y2 * spacing);
+        ctx.strokeStyle = game.lines[key] === 1 ? "blue" : "red";
+        ctx.stroke();
+      }
+
+      // Draw dots (and highlight selected)
+      for (let y = 0; y <= rows; y++) {
+        for (let x = 0; x <= cols; x++) {
+          ctx.beginPath();
+          ctx.arc(x * spacing, y * spacing, dotRadius, 0, Math.PI * 2);
+          if (selectedDot && selectedDot[0] === x && selectedDot[1] === y) {
+            ctx.fillStyle = playerNumber === 1 ? "blue" : "red";
+          } else {
+            ctx.fillStyle = "black";
+          }
+          ctx.fill();
+        }
       }
     }
-  }
 
-  function keyForLine(x1,y1,x2,y2) {
-    return (x1<x2||(x1===x2&&y1<y2))
-      ? `${x1},${y1},${x2},${y2}`
-      : `${x2},${y2},${x1},${y1}`;
-  }
+    function keyForLine(x1, y1, x2, y2) {
+      return (x1 < x2 || (x1 === x2 && y1 < y2))
+        ? `${x1},${y1},${x2},${y2}`
+        : `${x2},${y2},${x1},${y1}`;
+    }
 
-  function getDotAt(px, py) {
-    for (let gy=0; gy<=rows; gy++) {
-      for (let gx=0; gx<=cols; gx++) {
-        const dx = gx*spacing - px;
-        const dy = gy*spacing - py;
-        if (Math.hypot(dx,dy) < spacing*0.3) 
-          return [gx,gy];
+    function getDotAt(px, py) {
+      for (let gy = 0; gy <= rows; gy++) {
+        for (let gx = 0; gx <= cols; gx++) {
+          const dx = gx * spacing - px;
+          const dy = gy * spacing - py;
+          if (Math.hypot(dx, dy) < spacing * 0.3) {
+            return [gx, gy];
+          }
+        }
       }
+      return null;
     }
-    return null;
-  }
 
-  function areAdjacent([x1,y1],[x2,y2]) {
-    return (Math.abs(x1-x2)===1 && y1===y2)
-        || (Math.abs(y1-y2)===1 && x1===x2);
-  }
-
-  function tryAddLine(game, x1,y1,x2,y2) {
-    const lineKey = keyForLine(x1,y1,x2,y2);
-    if (game.lines[lineKey]) return game;
-    game.lines[lineKey] = playerNumber;
-    let claimed=false, checks=[];
-    if (x1!==x2) {
-      if (y1>0)      checks.push([Math.min(x1,x2),y1-1]);
-      if (y1<rows)   checks.push([Math.min(x1,x2),y1]);
-    } else {
-      if (x1>0)      checks.push([x1-1,Math.min(y1,y2)]);
-      if (x1<cols)   checks.push([x1,  Math.min(y1,y2)]);
+    function areAdjacent([x1, y1], [x2, y2]) {
+      return (Math.abs(x1 - x2) === 1 && y1 === y2)
+          || (Math.abs(y1 - y2) === 1 && x1 === x2);
     }
-    for (let [sx,sy] of checks) {
-      const edges=[
-        keyForLine(sx,sy,  sx+1,sy),
-        keyForLine(sx,sy+1,sx+1,sy+1),
-        keyForLine(sx,sy,  sx,  sy+1),
-        keyForLine(sx+1,sy,sx+1,sy+1),
-      ];
-      if (edges.every(k=>game.lines[k])) {
-        game.squares[`${sx},${sy}`]=playerNumber;
-        game.scores[playerNumber]++;
-        claimed=true;
+
+    function tryAddLine(game, x1, y1, x2, y2) {
+      const lineKey = keyForLine(x1, y1, x2, y2);
+      if (game.lines[lineKey]) return game;
+      game.lines[lineKey] = playerNumber;
+
+      let claimed = false;
+      const checks = [];
+      if (x1 !== x2) {
+        if (y1 > 0)    checks.push([Math.min(x1, x2), y1 - 1]);
+        if (y1 < rows) checks.push([Math.min(x1, x2), y1]);
+      } else {
+        if (x1 > 0)    checks.push([x1 - 1, Math.min(y1, y2)]);
+        if (x1 < cols) checks.push([x1,     Math.min(y1, y2)]);
       }
-    }
-    if (!claimed) game.currentPlayer = 3-playerNumber;
-    return game;
-  }
 
-  // click handler
-  canvas.addEventListener("click", async e => {
-    if (!gameRef || playerNumber==null) return;
-    const snap = await get(gameRef);
-    const game = snap.val();
-    if (!game || game.currentPlayer!==playerNumber) return;
+      for (let [sx, sy] of checks) {
+        const edges = [
+          keyForLine(sx,   sy,   sx+1, sy),
+          keyForLine(sx,   sy+1, sx+1, sy+1),
+          keyForLine(sx,   sy,   sx,   sy+1),
+          keyForLine(sx+1, sy,   sx+1, sy+1),
+        ];
+        if (edges.every(k => game.lines[k])) {
+          game.squares[`${sx},${sy}`] = playerNumber;
+          game.scores[playerNumber]++;
+          claimed = true;
+        }
+      }
 
-    const r = canvas.getBoundingClientRect();
-    const x = e.clientX - r.left;
-    const y = e.clientY - r.top;
-    const dot = getDotAt(x,y);
-    if (!dot) return;
-
-    // first tap: select
-    if (!selectedDot) {
-      selectedDot = dot;
-      draw(game);
-      return;
-    }
-    // same tap deselect
-    if (dot[0]===selectedDot[0]&&dot[1]===selectedDot[1]) {
-      selectedDot=null;
-      draw(game);
-      return;
-    }
-    // non-adjacent: move selection
-    if (!areAdjacent(selectedDot,dot)) {
-      selectedDot = dot;
-      draw(game);
-      return;
+      if (!claimed) {
+        game.currentPlayer = 3 - playerNumber;
+      }
+      return game;
     }
 
-    // valid adjacent second tap → place line
-    const [x1,y1]=selectedDot, [x2,y2]=dot;
-    selectedDot = null;
-    const newGame = tryAddLine(
-      JSON.parse(JSON.stringify(game)),
-      x1,y1,x2,y2
-    );
-    // immediate local draw/update
-    updateScoreUI(newGame);
-    draw(newGame);
-    // push full state
-    await set(gameRef, newGame);
-  });
+    // Unified tap handler
+    canvas.addEventListener("pointerdown", async e => {
+      e.preventDefault();
+      if (!gameRef || playerNumber == null) return;
 
-  // create
-  createBtn.onclick = async () => {
-    roomId = Math.random().toString(36).slice(2,8);
-    playerNumber = 1;
-    gameRef = ref(db, "games/"+roomId);
-    await set(gameRef, {
-      lines:{}, squares:{},
-      scores:{1:0,2:0},
-      currentPlayer:1
+      const snap = await get(gameRef);
+      const game = snap.val();
+      if (!game || game.currentPlayer !== playerNumber) return;
+
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+      const dot = getDotAt(x, y);
+      if (!dot) return;
+
+      if (!selectedDot) {
+        selectedDot = dot;
+        draw(game);
+        return;
+      }
+
+      const [x1, y1] = selectedDot;
+      const [x2, y2] = dot;
+      if (x1 === x2 && y1 === y2) {
+        selectedDot = null;
+        draw(game);
+        return;
+      }
+      if (!areAdjacent(selectedDot, dot)) {
+        selectedDot = dot;
+        draw(game);
+        return;
+      }
+
+      // valid second tap
+      selectedDot = null;
+      const newGame = tryAddLine(
+        JSON.parse(JSON.stringify(game)),
+        x1, y1, x2, y2
+      );
+      updateScoreUI(newGame);
+      draw(newGame);
+      await set(gameRef, newGame);
     });
-    info.textContent = `Room: ${roomId} (You are P1)`;
-    onValue(gameRef, snap=>{
-      const gm = snap.val();
-      if (!gm) return;
-      updateScoreUI(gm);
-      draw(gm);
-    });
-  };
 
-  // join
-  joinBtn.onclick = async () => {
-    roomId = roomInput.value.trim();
-    if (!roomId) return;
-    gameRef = ref(db, "games/"+roomId);
-    const snap = await get(gameRef);
-    if (!snap.exists()) {
-      alert("Room not found");
-      return;
-    }
-    playerNumber = 2;
-    info.textContent = `Joined ${roomId} (You are P2)`;
-    onValue(gameRef, snap=>{
-      const gm = snap.val();
-      if (!gm) return;
-      updateScoreUI(gm);
-      draw(gm);
+    // Create room
+    createBtn.addEventListener("click", async () => {
+      roomId = Math.random().toString(36).slice(2, 8);
+      playerNumber = 1;
+      gameRef = ref(db, `games/${roomId}`);
+      await set(gameRef, {
+        lines: {},
+        squares: {},
+        scores: {1: 0, 2: 0},
+        currentPlayer: 1
+      });
+      info.textContent = `Room: ${roomId} (You are P1)`;
+      onValue(gameRef, snap => {
+        const gm = snap.val();
+        if (!gm) return;
+        updateScoreUI(gm);
+        draw(gm);
+      });
     });
-  };
-</script>
+
+    // Join room
+    joinBtn.addEventListener("click", async () => {
+      const id = roomInput.value.trim();
+      if (!id) return;
+      roomId = id;
+      gameRef = ref(db, `games/${roomId}`);
+      const snap = await get(gameRef);
+      if (!snap.exists()) {
+        alert("Room not found");
+        return;
+      }
+      playerNumber = 2;
+      info.textContent = `Joined ${roomId} (You are P2)`;
+      onValue(gameRef, snap => {
+        const gm = snap.val();
+        if (!gm) return;
+        updateScoreUI(gm);
+        draw(gm);
+      });
+    });
+  </script>
 </body>
 </html>
