--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dots & Boxes Debug (Local)</title>
+  <title>Dots & Boxes Multiplayer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
@@ -27,11 +27,15 @@
       text-align: center;
       padding: 10px;
     }
+    #roomInput, #createRoomBtn, #joinRoomBtn {
+      margin: 4px;
+      padding: 6px 10px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
   <div id="controls">
-    <!-- hidden in debug -->
     <button id="createRoomBtn">Create Room</button>
     <input id="roomInput" placeholder="Room ID" />
     <button id="joinRoomBtn">Join Room</button>
@@ -41,32 +45,37 @@
   <canvas id="game" width="440" height="440"></canvas>
 
   <script type="module">
-    // Toggle debug mode
-    const DEBUG = true;
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+    import { getDatabase, ref, onValue, set, get } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js";
 
-    // local game state for debug
-    let localGame = {
-      lines: {},
-      squares: {},
-      scores: {1: 0, 2: 0},
-      currentPlayer: 1
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDeddxmHd2gRtZZBEaEmOqDA8qep9ReUdw",
+      authDomain: "dots-n-boxes-9010b.firebaseapp.com",
+      databaseURL: "https://dots-n-boxes-9010b-default-rtdb.firebaseio.com",
+      projectId: "dots-n-boxes-9010b",
+      storageBucket: "dots-n-boxes-9010b.appspot.com",
+      messagingSenderId: "710830234125",
+      appId: "1:710830234125:web:848952644d9842f0761344",
+      measurementId: "G-MEB8ZGSY1"
     };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
 
     const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
     const info = document.getElementById("info");
     const scoreDisplay = document.getElementById("score");
-    const controls = document.getElementById("controls");
-
-    // hide controls and label debug
-    if (DEBUG) {
-      controls.style.display = "none";
-      info.textContent = "Debug Mode: local play";
-    }
+    const createBtn = document.getElementById("createRoomBtn");
+    const joinBtn   = document.getElementById("joinRoomBtn");
+    const roomInput = document.getElementById("roomInput");
 
     const rows = 10, cols = 10;
     const spacing = canvas.width / cols;
     const dotRadius = 4;
+
+    let roomId, playerNumber, gameRef;
     let selectedDot = null;
 
     function updateScoreUI(game) {
@@ -76,7 +85,7 @@
     function draw(game) {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // boxes
+      // Draw completed squares
       for (let key in game.squares) {
         const [x, y] = key.split(",").map(Number);
         ctx.fillStyle = game.squares[key] === 1
@@ -90,7 +99,7 @@
         );
       }
 
-      // lines
+      // Draw lines
       ctx.lineWidth = 2;
       ctx.lineCap = "round";
       for (let key in game.lines) {
@@ -102,13 +111,17 @@
         ctx.stroke();
       }
 
-      // dots
+      // Draw dots
       for (let y = 0; y <= rows; y++) {
         for (let x = 0; x <= cols; x++) {
           ctx.beginPath();
           ctx.arc(x * spacing, y * spacing, dotRadius, 0, Math.PI * 2);
-          if (selectedDot && selectedDot[0] === x && selectedDot[1] === y) {
-            ctx.fillStyle = game.currentPlayer === 1 ? "blue" : "red";
+          if (
+            selectedDot &&
+            selectedDot[0] === x &&
+            selectedDot[1] === y
+          ) {
+            ctx.fillStyle = playerNumber === 1 ? "blue" : "red";
           } else {
             ctx.fillStyle = "black";
           }
@@ -137,17 +150,20 @@
     }
 
     function areAdjacent([x1, y1], [x2, y2]) {
-      return (Math.abs(x1 - x2) === 1 && y1 === y2)
-          || (Math.abs(y1 - y2) === 1 && x1 === x2);
+      return (
+        (Math.abs(x1 - x2) === 1 && y1 === y2) ||
+        (Math.abs(y1 - y2) === 1 && x1 === x2)
+      );
     }
 
     function tryAddLine(game, x1, y1, x2, y2) {
       const lineKey = keyForLine(x1, y1, x2, y2);
       if (game.lines[lineKey]) return game;
-      game.lines[lineKey] = game.currentPlayer;
+      game.lines[lineKey] = playerNumber;
 
       let claimed = false;
       const checks = [];
+
       if (x1 !== x2) {
         if (y1 > 0)    checks.push([Math.min(x1, x2), y1 - 1]);
         if (y1 < rows) checks.push([Math.min(x1, x2), y1]);
@@ -164,29 +180,32 @@
           keyForLine(sx+1, sy,   sx+1, sy+1),
         ];
         if (edges.every(k => game.lines[k])) {
-          game.squares[`${sx},${sy}`] = game.currentPlayer;
-          game.scores[game.currentPlayer]++;
+          game.squares[`${sx},${sy}`] = playerNumber;
+          game.scores[playerNumber]++;
           claimed = true;
         }
       }
 
       if (!claimed) {
-        game.currentPlayer = 3 - game.currentPlayer;
+        game.currentPlayer = 3 - playerNumber;
       }
       return game;
     }
 
-    // local-only tap handler
-    canvas.addEventListener("pointerdown", e => {
+    // Handle taps
+    canvas.addEventListener("pointerdown", async e => {
       e.preventDefault();
+      if (!gameRef || playerNumber == null) return;
+
+      const snap = await get(gameRef);
+      const game = snap.val();
+      if (!game || game.currentPlayer !== playerNumber) return;
+
       const rect = canvas.getBoundingClientRect();
       const x = e.clientX - rect.left;
       const y = e.clientY - rect.top;
       const dot = getDotAt(x, y);
       if (!dot) return;
-
-      // grab the current game object
-      const game = localGame;
 
       if (!selectedDot) {
         selectedDot = dot;
@@ -197,22 +216,63 @@
       const [x1, y1] = selectedDot;
       const [x2, y2] = dot;
 
-      // deselect or change selection
       if ((x1 === x2 && y1 === y2) || !areAdjacent(selectedDot, dot)) {
         selectedDot = dot;
         draw(game);
         return;
       }
 
-      // valid second tap → add line
+      // valid line placement
       selectedDot = null;
-      tryAddLine(game, x1, y1, x2, y2);
-      updateScoreUI(game);
-      draw(game);
+      const newGame = tryAddLine(
+        JSON.parse(JSON.stringify(game)),
+        x1, y1, x2, y2
+      );
+      updateScoreUI(newGame);
+      draw(newGame);
+      await set(gameRef, newGame);
     });
 
-    // initial render
-    draw(localGame);
+    // Create a new room
+    createBtn.addEventListener("click", async () => {
+      roomId = Math.random().toString(36).slice(2, 8);
+      playerNumber = 1;
+      gameRef = ref(db, `games/${roomId}`);
+      await set(gameRef, {
+        lines: {},
+        squares: {},
+        scores: {1: 0, 2: 0},
+        currentPlayer: 1
+      });
+      info.textContent = `Room: ${roomId} (You are P1)`;
+      onValue(gameRef, snap => {
+        const gm = snap.val();
+        if (!gm) return;
+        updateScoreUI(gm);
+        draw(gm);
+      });
+    });
+
+    // Join an existing room
+    joinBtn.addEventListener("click", async () => {
+      const id = roomInput.value.trim();
+      if (!id) return;
+      roomId = id;
+      gameRef = ref(db, `games/${roomId}`);
+      const snap = await get(gameRef);
+      if (!snap.exists()) {
+        alert("Room not found");
+        return;
+      }
+      playerNumber = 2;
+      info.textContent = `Joined ${roomId} (You are P2)`;
+      onValue(gameRef, snap => {
+        const gm = snap.val();
+        if (!gm) return;
+        updateScoreUI(gm);
+        draw(gm);
+      });
+    });
   </script>
 </body>
 </html>
